--- a/.htaccess
+++ b/.htaccess
@@ -78,9 +78,9 @@ ReadmeName /theme/footer.html
 # ERROR PAGES
 #
 
-ErrorDocument 400 http://dev.apache-directory-archive.dk/theme/error.html?code=400
-ErrorDocument 403 http://dev.apache-directory-archive.dk/theme/error.html?code=403
-ErrorDocument 404 http://dev.apache-directory-archive.dk/theme/error.html?code=404
-ErrorDocument 408 http://dev.apache-directory-archive.dk/theme/error.html?code=408
-ErrorDocument 500 http://dev.apache-directory-archive.dk/theme/error.html?code=500
-ErrorDocument 502 http://dev.apache-directory-archive.dk/theme/error.html?code=502
+ErrorDocument 400 /theme/error.html?code=400
+ErrorDocument 403 /theme/error.html?code=403
+ErrorDocument 404 /theme/error.html?code=404
+ErrorDocument 408 /theme/error.html?code=408
+ErrorDocument 500 /theme/error.html?code=500
+ErrorDocument 502 /theme/error.html?code=502
